2007-06-24  John Hosszu <john.hosszu@hp.com>

	* printer/: Added
          HP-Photosamrt_C4200.xml
          HP-Photosamrt_A320.xml
          HP-Photosamrt_A440.xml
          HP-LaserJet_P2010.xml
          HP-Photosmart_C5200.xml
          HP-910.xml
          HP-915.xml
          HP-Color_LaserJet_CM4730_MFP.xml
          HP-Color_LaserJet_CP3505.xml

        * db/source/PPD/HP
          HP-Color_LaserJet_CM4730_MFP.ppd
          HP-Color_LaserJet_CP3505.ppd

2007-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to current stable 5.0.1 release of
	  Gutenprint.

2007-06-11  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/KONICA_MINOLTA-bizhub_1050eP.xml,
	  printer/KONICA_MINOLTA-bizhub_1050e.xml,
	  printer/KONICA_MINOLTA-bizhub_1050P.xml,
	  printer/KONICA_MINOLTA-bizhub_1050.xml,
	  printer/KONICA_MINOLTA-bizhub_360.xml,
	  printer/KONICA_MINOLTA-bizhub_420.xml,
	  printer/KONICA_MINOLTA-bizhub_500.xml,
	  printer/KONICA_MINOLTA-bizhub_600.xml,
	  printer/KONICA_MINOLTA-bizhub_750.xml,
	  printer/KONICA_MINOLTA-bizhub_C250P.xml,
	  printer/KONICA_MINOLTA-bizhub_C250.xml,
	  printer/KONICA_MINOLTA-bizhub_C252P.xml,
	  printer/KONICA_MINOLTA-bizhub_C252.xml,
	  printer/KONICA_MINOLTA-bizhub_C300.xml,
	  printer/KONICA_MINOLTA-bizhub_C351.xml,
	  printer/KONICA_MINOLTA-bizhub_C352P.xml,
	  printer/KONICA_MINOLTA-bizhub_C352.xml,
	  printer/KONICA_MINOLTA-bizhub_C450P.xml,
	  printer/KONICA_MINOLTA-bizhub_C450.xml,
	  printer/KONICA_MINOLTA-bizhub_C451.xml,
	  printer/KONICA_MINOLTA-bizhub_C550.xml,
	  PPD/KONICA_MINOLTA/KO1050UX.ppd, PPD/KONICA_MINOLTA/KO500UX.ppd,
	  PPD/KONICA_MINOLTA/KO750UX.ppd, PPD/KONICA_MINOLTA/KOC250UX.ppd,
	  PPD/KONICA_MINOLTA/KOC252UX.ppd,
	  PPD/KONICA_MINOLTA/KOC351UX.ppd,
	  PPD/KONICA_MINOLTA/KOC352UX.ppd,
	  PPD/KONICA_MINOLTA/KOC450UX.ppd,
	  PPD/KONICA_MINOLTA/KOC451FX.ppd,
	  PPD/KONICA_MINOLTA/KOC451GX.ppd,
	  PPD/KONICA_MINOLTA/KOC451IX.ppd,
	  PPD/KONICA_MINOLTA/KOC451JX.ppd,