@@ -11,7 +11,9 @@
 
 	&lt;p&gt;
 
-	It also works with Konica Minolta magicolor 2490 MF (printer only).
+	It also works with the Konica Minolta magicolor 2480 MF, the
+	Konica Minolta magicolor 2490 MF, and the Xerox Phaser 6115MFP
+	(printer only).
 
 	&lt;p&gt;
 
@@ -21,8 +23,10 @@
 
     </en> </comments>
     <printers>
+	<printer><id>printer/KONICA_MINOLTA-magicolor_2480_MF</id></printer>
 	<printer><id>printer/KONICA_MINOLTA-magicolor_2490_MF</id></printer>
 	<printer><id>printer/KONICA_MINOLTA-magicolor_2530_DL</id></printer>
+	<printer><id>printer/Xerox-Phaser-6115MFP</id></printer>
 	<printer><id>printer/Generic-GDI_Printer</id></printer>
     </printers>
 </driver>
