@@ -1,0 +1,26 @@
+<driver id="driver/foo2qpdl">
+    <name>foo2qpdl</name>
+    <url>http://foo2qpdl.rkkda.com/</url>
+    <execution>
+	<filter />
+	<prototype></prototype>
+    </execution>
+    <comments> <en>
+
+	This is a driver developed for the Samsung CLP-300, CLP-600,
+	CLX-3160 (printer only), and the Xerox Phaser 6110 or Phaser
+	6110MFP (printer only).&lt;p&gt;
+
+	PPD files (and the Foomatic XML files to generate them) come
+	with the driver, therefore we do not supply PPDs here on the
+	OpenPrinting site.
+
+    </en> </comments>
+    <printers>
+	<printer><id>printer/Samsung-CLP-300</id></printer>
+	<printer><id>printer/Samsung-CLP-600</id></printer>
+	<printer><id>printer/Samsung-CLX-3160</id></printer>
+	<printer><id>printer/Xerox-Phaser-6110</id></printer>
+	<printer><id>printer/Generic-GDI_Printer</id></printer>
+    </printers>
+</driver>
