@@ -1,6 +1,6 @@
-<printer id="printer/KONICA_MINOLTA-magicolor_2530_DL">
+<printer id="printer/KONICA_MINOLTA-magicolor_2480_MF">
     <make>KONICA MINOLTA</make>
-    <model>magicolor 2530 DL</model>
+    <model>magicolor 2480 MF</model>
     <mechanism>
 	<laser/>
 	<color/>
@@ -25,7 +25,7 @@
 		Toner Yellow (4500 prints) - $119
 		Toner Magenta (4500 prints) - $119
 		Toner Cyan (4500 prints) - $119
-		Drum Cartridge (45000 prints) - $149
+		Drum Catridge (45000 prints) - $149
 	    </en> </comments>
 	    <partno>1710587-004</partno>
 	    <partno>1710587-005</partno>
@@ -34,30 +34,28 @@
 	    <partno>1710591-001</partno>
 	</consumables>
     </mechanism>
-    <url>http://www.minolta-qms.com/products/color/mc2530DL/index.asp</url>
+    <url>http://www.minolta-qms.com/products/mfp/mc2480MF/index.asp</url>
     <lang>
 	<proprietary/>
 	<!--no pjl--><!--No "text"?-->
     </lang>
     <autodetect>
 	<parallel>
-	    <ieee1284>CLASS:PRINTER;MODEL:magicolor 2530 DL;MANUFACTURER:KONICA MINOLTA;COMMAND SET:ZJS,PJL;</ieee1284>
+	    <ieee1284>CLASS:PRINTER;MODEL:magicolor 2480 MF;MANUFACTURER:KONICA MINOLTA;COMMAND SET:ZJS,PJL;</ieee1284>
 	    <manufacturer>KONICA MINOLTA</manufacturer>
-	    <model>magicolor 2530 DL</model>
+	    <model>magicolor 2480 MF</model>
 	    <commandset>ZJS,PJL</commandset>
 	</parallel>
 	<snmp>
-	    <description>KONICA MINOLTA magicolor 2530 DL</description>
+	    <description>KONICA MINOLTA magicolor 2480 MF</description>
 	</snmp>
     </autodetect>
     <functionality>B</functionality>
     <driver>foo2lava</driver>
     <!--not "unverified"--><!--no "contrib_url"-->
     <comments> <en>
-
-	The magicolor 2530 DL is a network color laser printer with a
-	2006 street price of $399 USD.  This printer is supported
-	by the foo2lava open software printer driver.
-
+	The magicolor 2480 MF is a network color all-in-one printer/scanner.
+	Only the printer is supported by the foo2lava open software printer
+	driver.
     </en> </comments>
 </printer>
