@@ -10,12 +10,29 @@
         <y>1200</y>
       </dpi>
     </resolution>
-    <consumables>
-      <comments>
-        <en>B, C, M, Y, total UKP 240</en>
-      </comments>
-      <!--one or more "partno" elements-->
-    </consumables>
+	<margins>
+	    <general>
+		<unit>mm</unit>
+		<top>4.23164</top>
+		<bottom>4.23164</bottom>
+		<left>3.175</left>
+		<right>3.175</right>
+	    </general>
+	</margins>
+	<consumables>
+	    <comments> <en>
+		Toner Black (4000 prints) - $80
+		Toner Yellow (4000 prints) - $110
+		Toner Magenta (4000 prints) - $110
+		Toner Cyan (4000 prints) - $110
+		Transfer Belt (35000 prints) - $47
+	    </en> </comments>
+	    <partno>CLP-K600A</partno>
+	    <partno>CLP-Y600A</partno>
+	    <partno>CLP-M600A</partno>
+	    <partno>CLP-C600A</partno>
+	    <partno>CLP-T600A</partno>
+	</consumables>
   </mechanism>
   <url>http://www.samsung.com/Products/PrinterandMultifunction/ColorLaserPrinters/CLP_600NXAA.asp</url>
   <lang>
@@ -23,13 +40,13 @@
   </lang>
   <autodetect>
   </autodetect>
-  <functionality>D</functionality>
-  <driver>splix</driver>
+  <functionality>B</functionality>
+  <driver>foo2qpdl</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    This is a cheap color laser printer with a proprietary
+    This is a cheap network color laser printer with a proprietary
     language. Samsung provides a closed-source driver on their web
     site, the "Unified Linux Driver", a driver package containing CUPS
     drivers and PPDs for all Samsung printers. Version 2.00.90 and
@@ -41,10 +58,13 @@
     href=&quot;show_printer.cgi?recnum=Samsung-CLP-510&quot;&gt;entry
     for the CLP-510&lt;/a&gt;.&lt;p&gt;
 
-    As the first free software printer driver SpliX supports this
-    printer, but the driver still needs testing. So please try out
-    this printer with SpliX and report your results to the author of
-    the driver.&lt;p&gt;
+    As the first free software printer driver Rick Richardson's
+    foo2qpdl supports this printer, but the driver still needs
+    testing. So please try out this printer with SpliX and report your
+    results to the author of the driver.&lt;p&gt;
+
+    Note that this printer does not (yet) work with the SpliX. The
+    support by the SpliX driver is still under development.&lt;p&gt;
 
     </en>
   </comments>
