@@ -1,0 +1,59 @@
+<printer id="printer/Samsung-CLX-3160">
+    <make>Samsung</make>
+    <model>CLX-3160</model>
+    <mechanism>
+	<laser/>
+	<color/>
+	<resolution>
+	    <dpi>
+		<x>1200</x>
+		<y>1200</y>
+	    </dpi>
+	</resolution>
+	<margins>
+	    <general>
+		<unit>mm</unit>
+		<top>4.23164</top>
+		<bottom>4.23164</bottom>
+		<left>3.175</left>
+		<right>3.175</right>
+	    </general>
+	</margins>
+	<consumables>
+	    <comments> <en>
+		Toner Black (2000 prints) - $54
+		Toner Yellow (1000 prints) - $45
+		Toner Magenta (1000 prints) - $45
+		Toner Cyan (1000 prints) - $45
+		Waste Toner (5000 prints) - $10
+		Drum Kit (20000 prints) - $96
+	    </en> </comments>
+	    <partno>CLP-K300A</partno>
+	    <partno>CLP-Y300A</partno>
+	    <partno>CLP-M300A</partno>
+	    <partno>CLP-C300A</partno>
+	    <partno>CLP-W300A</partno>
+	    <partno>CLP-R300A</partno>
+	</consumables>
+    </mechanism>
+    <url>http://www.samsung.com/Products/PrinterandMultifunction/ColorLaserPrinters/CLX_3160FNXAA.asp</url>
+    <lang>
+	<proprietary/>
+	<!--no pjl--><!--No "text"?-->
+    </lang>
+    <autodetect>
+    </autodetect>
+    <functionality>B</functionality>
+    <driver>foo2qpdl</driver>
+    <!--not "unverified"--><!--no "contrib_url"-->
+    <comments> <en>
+
+	The Samsung CLX-3160 (USB) is color laser multifunction printer
+	with a 2007 street price of $590 USD.
+
+	This printer is supported by the foo2qpdl open software printer driver.
+
+	Only the printer function is supported by this driver.
+
+    </en> </comments>
+</printer>
