@@ -1,3 +1,15 @@
+2007-06-25  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/foo2qpdl.xml, driver/foo2lava.xml,
+	  printer/KONICA_MINOLTA-magicolor_2480_MF.xml,
+	  printer/KONICA_MINOLTA-magicolor_2530_DL.xml,
+	  printer/Samsung-CLP-300.xml, printer/Samsung-CLP-600.xml,
+	  printer/Samsung-CLX-3160.xml, printer/Xerox-Phaser-6110.xml,
+	  printer/Xerox-Phaser-6115MFP.xml: Updated database to reflect
+	  the current state of the development of Rick Richardson's
+	  "foo2..." printer driver series. There are more printers
+	  supported by "foo2lava" now and the "foo2qpdl" driver was added.
+
 2007-06-24  John Hosszu <john.hosszu@hp.com>
 
 	* printer/: Added
